# monkeys-world-ui-demo

./: .gitmodules  CMakeLists.txt  README.md  main.cpp
include/game/: Monkey.hpp  OctTube.hpp  SlidingCamera.hpp  StrokeModel.hpp
include/gamemenu/: GameMenu.hpp  package_info.md
include/gamemenu/game/: ContainerObject.hpp
include/gamemenu/mat/: BlindsTransitionMat.hpp  MenuBGMat.hpp
include/gamemenu/ui/: CourseSelectGroup.hpp  DescriptionBG.hpp  MenuBG.hpp  SlidingBlindsTransition.hpp  StageBanner.hpp  StageSelectTransition.hpp
include/mat/: DitheredOctMat.hpp  StrokeMat.hpp
include/scene/: SplashScreen.hpp
include/ui/: HorizontalMenuGroup.hpp  LerpMenu.hpp
resources/gamemenu/: menubg.frag  menubg.vert
resources/mat/: BlindsTransition.frag  BlindsTransition.vert  DitheredOctMat.frag  DitheredOctMat.vert  HorizontalVenetianTransition.frag  HorizontalVenetianTransition.vert  StrokeMat.frag  StrokeMat.vert
src/game/: Monkey.cpp  OctTube.cpp  SlidingCamera.cpp  StrokeModel.cpp
src/gamemenu/: GameMenu.cpp
src/gamemenu/game/: ContainerObject.cpp
src/gamemenu/mat/: BlindsTransitionMat.cpp  MenuBGMat.cpp
src/gamemenu/ui/: CourseSelectGroup.cpp  DescriptionBG.cpp  MenuBG.cpp  SlidingBlindsTransition.cpp  StageBanner.cpp  StageSelectTransition.cpp
src/mat/: DitheredOctMat.cpp  StrokeMat.cpp
src/scene/: SplashScreen.cpp
src/ui/: HorizontalMenuGroup.cpp  LerpMenu.cpp
